--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,20 @@
+@font-face {
+  font-family: 'starwars';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./fonts/STARWARS.woff') format('woff');
+}
+
+html {
+  font-size: 100%;
+  font-family: 'starwars';
+  letter-spacing: .07em;
+  background-image: url('./images/bg.jpg')
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'starwars';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
